Update gatsby monorepo

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "gatsby-plugin-preact": "^2.0.0-beta.3",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.1",
     "gatsby-plugin-react-next": "^2.0.1-13",
-    "gatsby-plugin-sass": "2.0.0-beta.1",
-    "gatsby-plugin-sharp": "2.0.0-beta.1",
+    "gatsby-plugin-sass": "2.0.1",
+    "gatsby-plugin-sharp": "2.0.5",
     "gatsby-plugin-sitemap": "^2.0.0-beta.1",
     "gatsby-plugin-twitter": "^2.0.0-beta.1",
     "gatsby-remark-copy-linked-files": "^2.0.0-beta.1",
