--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-plugin-sitemap": "^2.0.0-beta.1",
     "gatsby-plugin-twitter": "^2.0.0-beta.1",
     "gatsby-remark-copy-linked-files": "^2.0.0-beta.1",
-    "gatsby-remark-images": "^2.0.1-beta.1",
+    "gatsby-remark-images": "^3.0.0",
     "gatsby-remark-prismjs": "^3.0.0-beta.1",
     "gatsby-remark-responsive-iframe": "^2.0.0-beta.1",
     "gatsby-remark-smartypants": "^2.0.0-beta.1",
