--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-link": "^2.0.0-beta.1",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.1",
     "gatsby-plugin-manifest": "^2.0.2-beta.1",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-offline": "^2.0.0-beta.1",
     "gatsby-plugin-react-helmet": "^3.0.0-beta.1",
     "gatsby-plugin-sass": "2.0.7",
