--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "version": "2.0.0",
   "author": "Bruno Alla <alla.brunoo@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.0.0-beta.1",
-    "gatsby-image": "^2.0.0-beta.1",
-    "gatsby-link": "^2.0.0-beta.1",
-    "gatsby-plugin-google-analytics": "^2.0.0-beta.1",
-    "gatsby-plugin-manifest": "^2.0.2-beta.1",
+    "gatsby": "^2.0.82",
+    "gatsby-image": "^2.0.25",
+    "gatsby-link": "^2.0.7",
+    "gatsby-plugin-google-analytics": "^2.0.8",
+    "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-offline": "^2.0.0-beta.1",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.1",
-    "gatsby-plugin-sass": "2.0.7",
-    "gatsby-plugin-sharp": "2.0.7",
-    "gatsby-plugin-sitemap": "^2.0.0-beta.1",
-    "gatsby-source-filesystem": "^2.0.1-beta.1",
-    "gatsby-transformer-remark": "^2.1.1-beta.1",
-    "gatsby-transformer-sharp": "^2.1.1-beta.1",
+    "gatsby-plugin-offline": "^2.0.20",
+    "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-sitemap": "^2.0.4",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-remark": "^2.1.19",
+    "gatsby-transformer-sharp": "^2.1.10",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "react-helmet": "5.2.0",
