--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "author": "Bruno Alla <alla.brunoo@gmail.com>",
   "dependencies": {
+    "@browniebroke/gatsby-image-gallery": "0.3.1",
     "@fortawesome/fontawesome-svg-core": "1.2.12",
     "@fortawesome/free-brands-svg-icons": "5.6.3",
     "@fortawesome/free-solid-svg-icons": "5.6.3",
@@ -27,8 +28,7 @@
     "lodash": "4.17.11",
     "react": "16.7.0",
     "react-dom": "16.7.0",
-    "react-helmet": "5.2.0",
-    "react-image-lightbox": "5.1.0"
+    "react-helmet": "5.2.0"
   },
   "devDependencies": {
     "bundlesize": "0.17.0",
