Remove reference to gh-pages, tweak test cmd & run lint on CI

--- a/package.json
+++ b/package.json
@@ -62,12 +62,12 @@
     "build": "gatsby build",
     "prebundlesize": "yarn run build",
     "bundlesize": "bundlesize",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.+(js|json|md)\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "lint:text": "textlint src/pages/**/index.md",
     "lint:textfix": "textlint --fix src/pages/**/index.md",
-    "test": "prettier --write \"**/*.+(js|jsx|json|css|scss)\""
+    "test": "prettier --check \"**/*.+(js|jsx|json|css|scss)\""
   }
 }
