--- a/package.json
+++ b/package.json
@@ -53,8 +53,12 @@
       "maxSize": "40 kB"
     },
     {
-      "path": "./public/component---src-pages*.js",
-      "maxSize": "15 kB"
+      "path": "./public/component---src-pages-!(photos)-*.js",
+      "maxSize": "1 kB"
+    },
+    {
+      "path": "./public/component---src-pages-photos-*.js",
+      "maxSize": "30 kB"
     }
   ],
   "main": "n/a",
