--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "author": "Bruno Alla <alla.brunoo@gmail.com>",
   "dependencies": {
     "@browniebroke/gatsby-image-gallery": "2.0.1",
-    "@fortawesome/fontawesome-svg-core": "1.2.26",
-    "@fortawesome/free-brands-svg-icons": "5.12.0",
-    "@fortawesome/free-solid-svg-icons": "5.12.0",
-    "@fortawesome/react-fontawesome": "0.1.8",
     "bootstrap": "4.4.1",
-    "font-awesome": "4.7.0",
     "gatsby": "2.18.17",
     "gatsby-image": "2.2.37",
     "gatsby-link": "2.2.27",
@@ -29,7 +24,8 @@
     "lodash": "4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "react-icons": "^3.8.0"
   },
   "devDependencies": {
     "bundlesize": "0.18.0",
