--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-netlify": "2.1.31",
     "gatsby-plugin-offline": "3.0.32",
     "gatsby-plugin-react-helmet": "3.1.21",
+    "gatsby-plugin-robots-txt": "1.5.0",
     "gatsby-plugin-sass": "2.1.27",
     "gatsby-plugin-sentry": "1.0.1",
     "gatsby-plugin-sharp": "2.4.3",
