--- a/.github/workflows/lighthouse-previews.yml
+++ b/.github/workflows/lighthouse-previews.yml
@@ -22,10 +22,9 @@ jobs:
         netlify_site: 'chez-nicole.netlify.com'
     - name: Upload report to Zeit
       run: now -t ${{ secrets.ZEIT_TOKEN }} deploy ./report/https*.html | tee zeit-now.log
-    - name: Link to report
+    - name: Save link to report in environment
       run: |
         TARGET_URL=`tail -n1 zeit-now.log`
-        echo "${TARGET_URL}"
     - name: Update status to success
       run: |
         curl -X POST https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.sha }} \
