Run Prettier & update ESlint settings

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,8 @@
       {
         "trailingComma": "es5",
         "singleQuote": true,
-        "semi": false
+        "semi": false,
+        "arrowParens": "always"
       }
     ]
   }
