Install netlify-plugin-gatsby-cache

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,6 @@
 
 [context.production]
   environment = { GA_TRACKING_ID = "UA-126206092-1" }
+
+[[plugins]]
+  package = "netlify-plugin-gatsby-cache"
