--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-icons": "3.10.0"
   },
   "devDependencies": {
-    "bundlesize": "0.18.0",
+    "bundlewatch": "0.2.7",
     "eslint": "7.4.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.4",
@@ -43,7 +43,7 @@
     "starter"
   ],
   "license": "MIT",
-  "bundlesize": [
+  "bundlewatch": [
     {
       "path": "./public/app-*.js",
       "maxSize": "40 kB"
@@ -60,8 +60,8 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "prebundlesize": "yarn run build",
-    "bundlesize": "bundlesize",
+    "prebundlewatch": "yarn run build",
+    "bundlewatch": "bundlewatch",
     "deploy": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.+(js|json|md)\"",
