--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
   "major": {
     "automerge": false
   },
-  "schedule": ["on Monday between the 1st and the 7th day of the month"],
+  "schedule": ["on the first Monday of the month"],
   "prConcurrentLimit": 2,
   "prHourlyLimit": 1,
   "supportPolicy": ["current"]
