--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,7 @@
   "major": {
     "automerge": false
   },
-  "schedule": ["on Monday", "on the 1st through 7th day of the month"],
+  "schedule": ["on the 1st and 15th day of the month"],
   "prConcurrentLimit": 2,
   "prHourlyLimit": 1,
   "supportPolicy": ["current"]
