--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Bruno Alla <alla.brunoo@gmail.com>",
   "dependencies": {
     "@browniebroke/gatsby-image-gallery": "4.0.1",
+    "@browniebroke/react-ui-components": "1.0.3",
     "bootstrap": "4.5.3",
     "gatsby": "2.26.1",
     "gatsby-image": "2.5.0",
