--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "version": "2.0.0",
   "author": "Bruno Alla <alla.brunoo@gmail.com>",
   "dependencies": {
-    "@browniebroke/gatsby-image-gallery": "5.0.0",
+    "@browniebroke/gatsby-image-gallery": "6.0.0",
     "@browniebroke/react-ui-components": "1.7.1",
     "bootstrap": "4.6.0",
-    "gatsby": "2.32.9",
-    "gatsby-image": "2.11.0",
-    "gatsby-link": "2.11.0",
-    "gatsby-plugin-google-analytics": "2.11.0",
-    "gatsby-plugin-manifest": "2.12.1",
-    "gatsby-plugin-netlify": "2.11.0",
-    "gatsby-plugin-offline": "3.10.2",
-    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby": "3.1.0",
+    "gatsby-plugin-image": "1.1.0",
+    "gatsby-link": "3.1.0",
+    "gatsby-plugin-google-analytics": "3.1.0",
+    "gatsby-plugin-manifest": "3.1.0",
+    "gatsby-plugin-netlify": "3.1.0",
+    "gatsby-plugin-offline": "4.1.0",
+    "gatsby-plugin-react-helmet": "4.1.0",
     "gatsby-plugin-robots-txt": "1.5.5",
-    "gatsby-plugin-sass": "3.2.0",
+    "gatsby-plugin-sass": "4.1.0",
     "gatsby-plugin-sentry": "1.0.1",
-    "gatsby-plugin-sharp": "2.14.3",
-    "gatsby-plugin-sitemap": "2.12.0",
-    "gatsby-source-filesystem": "2.11.1",
-    "gatsby-transformer-remark": "2.16.1",
-    "gatsby-transformer-sharp": "2.12.0",
+    "gatsby-plugin-sharp": "3.1.0",
+    "gatsby-plugin-sitemap": "3.1.0",
+    "gatsby-source-filesystem": "3.1.0",
+    "gatsby-transformer-remark": "3.1.0",
+    "gatsby-transformer-sharp": "3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
