--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "gatsby-plugin-sentry": "1.0.1",
     "gatsby-plugin-sharp": "3.1.0",
     "gatsby-plugin-sitemap": "3.1.0",
+    "gatsby-plugin-typescript": "3.1.0",
     "gatsby-source-filesystem": "3.1.0",
     "gatsby-transformer-remark": "3.1.0",
     "gatsby-transformer-sharp": "3.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
-    "react-icons": "4.2.0"
+    "react-icons": "4.2.0",
+    "typescript": "4.2.3"
   },
   "devDependencies": {
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.2",
+    "@types/react-helmet": "6.1.0",
     "bundlewatch": "0.3.2",
     "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
@@ -53,7 +58,8 @@
     "develop": "gatsby develop",
     "format": "prettier --write .",
     "lint:eslint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "lint:prettier": "prettier --check ."
+    "lint:prettier": "prettier --check .",
+    "lint:tsc": "tsc"
   },
   "prettier": {
     "trailingComma": "es5",
