--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.2",
     "@types/react-helmet": "6.1.0",
+    "@typescript-eslint/parser": "4.19.0",
     "bundlewatch": "0.3.2",
     "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
@@ -57,7 +58,7 @@
     "deploy": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write .",
-    "lint:eslint": "eslint --ext .js,.jsx --ignore-pattern public .",
+    "lint:eslint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:prettier": "prettier --check .",
     "lint:tsc": "tsc"
   },
@@ -67,6 +68,7 @@
     "singleQuote": true
   },
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
     "extends": [
       "prettier"
     ],
